<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <!-- tableRow0 -->
  <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow0">
    <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            android:text="@string/fanfan"
            android:textAppearance="?android:attr/textAppearanceLarge" />   
      
  </TableRow>
 <!-- tableRow1 -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="140dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="112dp"
            android:layout_height="140dp"
            android:src="@drawable/ic_launcher1" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                 <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:text="t.sina.com.cn/1752467960" 
             android:autoLink="web"/>
                
            </TableRow>

            <TableRow
                android:id="@+id/tableRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                 <TextView
              android:id="@+id/textView9"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="left"
              android:text="Email：caojiashi@gmail.com"/>
 
                

            </TableRow>

            <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="wrap_content"
                android:layout_height="35dp" >
              <Button
                     android:id="@+id/button7"
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="80dp"
                     android:layout_height="37dp"
                     android:text="@string/send" />       
            </TableRow>

            <TableRow
                android:id="@+id/tableRow12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                 <TextView
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
              android:text="Likes:Singing, dogs, cherry\nDisklikes:Lie\nDate of Birth:18 March 1976"/>
            </TableRow>
        </TableLayout>

        
    </TableRow>

 <!-- tableRow2 -->
  <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow2">
    <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" 
          android:text="@string/songs"
          android:textAppearance="?android:attr/textAppearanceMedium" />      
 </TableRow>      
<!-- tableRow3 -->
  <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow3">
      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:text="@string/start"
          style="?android:attr/buttonStyleSmall"
          android:textColorLink="@android:color/holo_blue_light" />

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" 
          android:text="@string/song1"
          android:textAppearance="?android:attr/textAppearanceMedium" />

  </TableRow>
  <!-- tableRow4 -->
  <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow4">

      <Button
          android:id="@+id/button4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="right"
          style="?android:attr/buttonStyleSmall"
          android:text="@string/start" />
 
  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/song2"
      android:textAppearance="?android:attr/textAppearanceMedium" />

  </TableRow>
 <!-- tableRow5 -->
  <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow5">
  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="?android:attr/buttonStyleSmall"
      android:text="@string/pause" />

  <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="?android:attr/buttonStyleSmall"
      android:text="@string/restart" />

 </TableRow>
 <!-- tableRow6 -->
  <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow6">
   <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" 
          android:text="@string/videos"
          android:textAppearance="?android:attr/textAppearanceMedium" />           
 </TableRow>      
<!-- tableRow7 -->
  <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow7">

      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/video1"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <Button
          android:id="@+id/button5"
          style="?android:attr/buttonStyleSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/play" 
          android:onClick="startVideoActivity"/>
  
</TableRow>
<!-- tableRow8 -->
  <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow8">

      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/video2"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <Button
          android:id="@+id/button6"
          style="?android:attr/buttonStyleSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/play" 
          android:onClick="startVideoActivity2"/>

      </TableRow>
      <!-- tableRow9 -->
  <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow9">

      <Button
          android:id="@+id/button8"
          style="?android:attr/buttonStyleSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/wallpaper" />

       </TableRow>
</LinearLayout>